--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "token": "",
     "language": "en",
     "prefix": "!",
-    "mongodbUri": "",
+    "mongodbUri": "mongodb+srv://feikaccc543:XXXWORSTIKCION@cluster01.jsrrn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster01",
     "geniusToken": "0CHr9jtPjR7EKraXUVv6__8ELmEwFeUwt5vYAhk-is_fGOq-10-epdMzESkMPUnf",
     "excessCommands": {
         "utility": true,
