--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": "MTI4MjM2NDc3Njc4MTE4NTA4NA.G598uw.9BeIuQJ9yqoR09nfi4xPoLOzFj9nTBHuKaEsG8",
     "language": "en",
     "prefix": "!",
     "mongodbUri": "mongodb+srv://feikaccc543:XXXWORSTIKCION@cluster01.jsrrn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster01",
